--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/cluster/Update.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/cluster/Update.razor
@@ -71,18 +71,18 @@
     {
         if (Id < 1 || _info == null)
         {
-            await js.InvokeVoidAsync("alert", "Yaml模板不存在");
+            await js.InvokeVoidAsync("layer.alert", "Yaml模板不存在", new {icon = 2, title = "出错了"});
             nav.NavigateTo($"/cluster/list");
         }
         try
         {
             await _iocManager.Resolve<IClusterService>().UpdateAsync(Id, _info);
-            await js.InvokeVoidAsync("alert", "修改成功");
+            await js.InvokeVoidAsync("layer.alert", "修改成功", new {icon = 1});
             nav.NavigateTo($"/cluster/update/{_info.Id}");
         }
         catch (Exception e)
         {
-            await js.InvokeVoidAsync("alert", e.Message);
+            await js.InvokeVoidAsync("layer.alert", e.Message, new {icon = 2, title = "出错了"});
         }
     }
 
@@ -90,7 +90,7 @@
     {
         if (Id < 1 || _info == null)
         {
-            await js.InvokeVoidAsync("alert", "Yaml模板不存在");
+            await js.InvokeVoidAsync("layer.alert", "Yaml模板不存在", new {icon = 2, title = "出错了"});
             nav.NavigateTo($"/cluster/list");
         }
     }
@@ -102,7 +102,7 @@
             _info = await _iocManager.Resolve<IClusterService>().ToInfoAsync(Id);
             if (_info == null)
             {
-                await js.InvokeVoidAsync("alert", "Yaml模板不存在");
+                await js.InvokeVoidAsync("layer.alert", "Yaml模板不存在", new {icon = 2, title = "出错了"});
                 nav.NavigateTo($"/cluster/list");
             }
         }
