--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/task_group/Add.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/task_group/Add.razor
@@ -82,12 +82,12 @@
                 throw new Exception("标题、时间间隔、传输数据、Job名称 必须填写");
             }
             await _iocManager.Resolve<ITaskGroupAdd>().AddAsync(_info);
-            await js.InvokeVoidAsync("alert", "添加成功");
+            await js.InvokeVoidAsync("layer.alert", "添加成功", new {icon = 1});
             nav.NavigateTo("/fss/task_group/list");
         }
         catch (Exception e)
         {
-            await js.InvokeVoidAsync("alert", e.Message);
+            await js.InvokeVoidAsync("layer.alert", e.Message, new {icon = 2, title = "出错了"});
         }
     }
 
