--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/task_group/Update.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/task_group/Update.razor
@@ -121,18 +121,18 @@
     {
         if (Id < 1 || _info == null)
         {
-            await js.InvokeVoidAsync("alert", "任务组不存在");
+            await js.InvokeVoidAsync("layer.alert", "任务组不存在", new {icon = 2, title = "出错了"});
             nav.NavigateTo($"/fss/task_group/list");
         }
         try
         {
             await _iocManager.Resolve<ITaskGroupUpdate>().SaveAsync(_info);
-            await js.InvokeVoidAsync("alert", "修改成功");
+            await js.InvokeVoidAsync("layer.alert", "修改成功", new {icon = 1});
             nav.NavigateTo($"/fss/task_group/update/{_info.Id}");
         }
         catch (Exception e)
         {
-            await js.InvokeVoidAsync("alert", e.Message);
+            await js.InvokeVoidAsync("layer.alert", e.Message, new {icon = 2, title = "出错了"});
         }
     }
 
@@ -140,7 +140,7 @@
     {
         if (Id < 1 || _info == null)
         {
-            await js.InvokeVoidAsync("alert", "任务组不存在");
+            await js.InvokeVoidAsync("layer.alert", "任务组不存在", new {icon = 2, title = "出错了"});
             nav.NavigateTo($"/fss/task_group/list");
         }
     }
@@ -152,7 +152,7 @@
             _info = await _iocManager.Resolve<ITaskGroupInfo>().ToInfoAsync(Id);
             if (_info == null)
             {
-                await js.InvokeVoidAsync("alert", "任务组不存在");
+                await js.InvokeVoidAsync("layer.alert", "任务组不存在", new {icon = 2, title = "出错了"});
                 nav.NavigateTo($"/fss/task_group/list");
                 return;
             }
