--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/git/Add.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/git/Add.razor
@@ -63,12 +63,12 @@
                 throw new Exception("Git名称、托管地址必须填写。");
             }
             await _iocManager.Resolve<IGitService>().AddAsync(_info);
-            await js.InvokeVoidAsync("alert", "添加成功");
+            await js.InvokeVoidAsync("layer.alert", "添加成功", new {icon = 1});
             nav.NavigateTo("/git/list");
         }
         catch (Exception e)
         {
-            await js.InvokeVoidAsync("alert", e.Message);
+            await js.InvokeVoidAsync("layer.alert", e.Message, new {icon = 2, title = "出错了"});
         }
     }
 
