--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/tpl/Update.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/tpl/Update.razor
@@ -67,18 +67,18 @@
     {
         if (Id < 1 || _info == null)
         {
-            await js.InvokeVoidAsync("alert", "Yaml模板不存在");
+            await js.InvokeVoidAsync("layer.alert", "Yaml模板不存在", new {icon = 2, title = "出错了"});
             nav.NavigateTo($"/k8s/tpl/list");
         }
         try
         {
             await _iocManager.Resolve<IYamlTplService>().UpdateAsync(Id, _info);
-            await js.InvokeVoidAsync("alert", "修改成功");
+            await js.InvokeVoidAsync("layer.alert", "修改成功", new {icon = 1});
             nav.NavigateTo($"/k8s/tpl/update/{_info.Id}");
         }
         catch (Exception e)
         {
-            await js.InvokeVoidAsync("alert", e.Message);
+            await js.InvokeVoidAsync("layer.alert", e.Message, new {icon = 2, title = "出错了"});
         }
     }
 
@@ -86,7 +86,7 @@
     {
         if (Id < 1 || _info == null)
         {
-            await js.InvokeVoidAsync("alert", "Yaml模板不存在");
+            await js.InvokeVoidAsync("layer.alert", "Yaml模板不存在", new {icon = 2, title = "出错了"});
             nav.NavigateTo($"/k8s/tpl/list");
         }
     }
@@ -98,7 +98,7 @@
             _info = await _iocManager.Resolve<IYamlTplService>().ToInfoAsync(Id);
             if (_info == null)
             {
-                await js.InvokeVoidAsync("alert", "Yaml模板不存在");
+                await js.InvokeVoidAsync("layer.alert", "Yaml模板不存在", new {icon = 2, title = "出错了"});
                 nav.NavigateTo($"/k8s/tpl/list");
             }
         }
