--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project/Add.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project/Add.razor
@@ -84,12 +84,12 @@
             else if (!_info.Path.StartsWith('/')) _info.Path = "/" + _info.Path;
 
             await _iocManager.Resolve<IProjectService>().AddAsync(_info);
-            await js.InvokeVoidAsync("alert", "添加成功");
+            await js.InvokeVoidAsync("layer.alert", "添加成功", new {icon = 1});
             nav.NavigateTo("/project/list");
         }
         catch (Exception e)
         {
-            await js.InvokeVoidAsync("alert", e.Message);
+            await js.InvokeVoidAsync("layer.alert", e.Message, new {icon = 2, title = "出错了"});
         }
     }
 
