--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project_group/Add.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project_group/Add.razor
@@ -21,7 +21,7 @@
                 <select @bind="_info.ClusterId">
                     @foreach (var clusterVO in _lstCluster)
                     {
-                        <option value="@clusterVO.Id">@clusterVO.Name</option>
+                        <option value="@clusterVO.Id">[@clusterVO.RuntimeEnvType.ToString()] @clusterVO.Name</option>
                     }
                 </select>
             </div>
