添加，项目组关联多个集群的功能

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project_group/Add.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project_group/Add.razor
@@ -9,7 +9,7 @@
 
 <div class="layui-card">
     <div class="layui-card-header">
-        添加项目
+        添加项目组
         <div class="layui-right">
             <button class="layui-btn" @onclick="GotoList"><i class="am-icon-plus"></i> 列表</button>
         </div>
@@ -18,12 +18,13 @@
         <div class="layui-form-item">
             <label class="layui-form-label">集群</label>
             <div class="layui-input-block">
-                <select @bind="_info.ClusterId">
-                    @foreach (var clusterVO in _lstCluster)
-                    {
-                        <option value="@clusterVO.Id">[@clusterVO.RuntimeEnvType.ToString()] @clusterVO.Name</option>
-                    }
-                </select>
+                @foreach (var clusterVO in _lstCluster)
+                {
+                    <div class="layui-unselect layui-form-checkbox layui-form-checked" lay-skin="primary" style="cursor: auto;">
+                        <input type="checkbox" @bind="_selectCluster[clusterVO.Id]"/>
+                        <span>【@clusterVO.RuntimeEnvType.ToString()】@clusterVO.Name</span>
+                    </div>
+                }
             </div>
         </div>
         <div class="layui-form-item">
@@ -44,19 +45,23 @@
 
 @code{
 
-    private readonly ProjectGroupVO _info = new() {};
+    private readonly ProjectGroupVO _info = new() {ClusterIds =new()};
     private List<ClusterVO> _lstCluster = new();
+    private Dictionary<int, bool> _selectCluster = new();
 
     protected override async Task OnInitializedAsync()
     {
         _lstCluster = await _iocManager.Resolve<IClusterService>().ToListAsync();
+        _selectCluster = _lstCluster.ToDictionary(o => o.Id, o => false);
     }
 
     private async Task AddInfo()
     {
         try
         {
-            if (_info.Name == null || _info.ClusterId == 0)
+            _info.ClusterIds = _selectCluster.Where(o => o.Value).Select(o => o.Key).ToList();
+
+            if (_info.Name == null || _info.ClusterIds == null || _info.ClusterIds.Count == 0)
             {
                 await js.InvokeVoidAsync("layer.alert", "项目组、集群必须填写.", new {icon = 2, title = "出错了"});
             }
@@ -75,5 +80,4 @@
     {
         nav.NavigateTo("/project_group/list");
     }
-
 }
