--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project_group/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project_group/List.razor
@@ -26,12 +26,12 @@
                             </th>
                             <th data-field="Type" data-key="14-0-1">
                                 <div class="layui-table-cell laytable-cell-14-0-1">
-                                    <span>集群</span>
+                                    <span>项目组名称</span>
                                 </div>
                             </th>
                             <th data-field="Type" data-key="14-0-2">
                                 <div class="layui-table-cell laytable-cell-14-0-2">
-                                    <span>项目组名称</span>
+                                    <span>集群</span>
                                 </div>
                             </th>
                         </tr>
@@ -50,12 +50,12 @@
                                 </td>
                                 <td data-field="Type" data-key="14-0-1">
                                     <div class="layui-table-cell laytable-cell-14-0-1">
-                                        @_lstCluster.Find(o=>o.Id==info.ClusterId)?.Name
+                                        <a href="/project_group/update/@info.Id">@info.Name</a>
                                     </div>
                                 </td>
                                 <td data-field="Type" data-key="14-0-2">
                                     <div class="layui-table-cell laytable-cell-14-0-2">
-                                        <a href="/project_group/update/@info.Id">@info.Name</a>
+                                        @string.Join("、", @_lstCluster.FindAll(o => info.ClusterIds.Contains(o.Id)).Select(o => $"[{o.RuntimeEnvType.ToString()}] {o.Name}"))
                                     </div>
                                 </td>
                             </tr>
@@ -70,9 +70,8 @@
 </div>
 <style>
     .laytable-cell-14-0-0{ width: 80px; }
-    .laytable-cell-14-0-1{ width: 150px; }
-    .laytable-cell-14-0-2{ width: 500px; }
-    .laytable-cell-14-0-3{ width: 500px; }
+    .laytable-cell-14-0-1{ width: 180px; }
+    .laytable-cell-14-0-2{ width: 800px; }
 </style>
 
 @code{
@@ -82,18 +81,18 @@
 
     private List<ProjectGroupVO> _lst = new();
     private List<ClusterVO> _lstCluster = new();
-    
+
     protected override async Task OnInitializedAsync()
     {
         _lstCluster = await _iocManager.Resolve<IClusterService>().ToListAsync();
     }
-    
+
     protected override async Task OnParametersSetAsync()
     {
         _lst = await _iocManager.Resolve<IProjectGroupService>().ToListAsync();
         _lst = _lst.OrderByDescending(o => o.Id).ToList();
         _totalCount = _lst.Count;
-        
+
         _lstCluster = await _iocManager.Resolve<IClusterService>().ToListAsync();
         _lstCluster = _lstCluster.OrderByDescending(o => o.Id).ToList();
     }
