--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/deploy/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/deploy/List.razor
@@ -4,6 +4,7 @@
 @using FOPS.Abstract.K8S.Server
 @using FOPS.Abstract.MetaInfo.Entity
 @using FOPS.Abstract.MetaInfo.Server
+@using FS.Extends
 @inject IIocManager _iocManager;
 @inject NavigationManager nav;
 @inject IJSRuntime js;
@@ -11,7 +12,7 @@
 <div class="layui-card">
     <div class="layui-card-header" id="anchor-play-header">
         模板发布
-        <select @bind="_selectClusterId" style="display:inline;">
+        <select style="display:inline;" @onchange="ClusterChange">
             @foreach (var clusterVO in _lstCluster)
             {
                 <option value="@clusterVO.Id">@clusterVO.RuntimeEnvType 环境 @clusterVO.Name</option>
@@ -157,25 +158,23 @@
     private int _totalCount;
     private int _pageSize = 999;
 
+    private int _clusterId;
     private List<ProjectVO> _lst = new();
     private List<YamlTplVO> _lstTpl = new();
     private List<ClusterVO> _lstCluster = new();
-    private int _selectClusterId;
 
     protected override async Task OnInitializedAsync()
     {
-        _lst = await _iocManager.Resolve<IProjectService>().ToListAsync();
-        _lst = _lst.OrderByDescending(o => o.Id).ToList();
-        _totalCount = _lst.Count;
-
-    // 模板
+        // 模板
         _lstTpl = await _iocManager.Resolve<IYamlTplService>().ToListAsync();
         _lstTpl = _lstTpl.OrderByDescending(o => o.Id).ToList();
 
-    // 集群
+        // 集群
         _lstCluster = await _iocManager.Resolve<IClusterService>().ToListAsync();
         _lstCluster = _lstCluster.OrderByDescending(o => o.Id).ToList();
-        if (_lstCluster != null) _selectClusterId = _lstCluster[0].Id;
+        if (_lstCluster != null) _clusterId = _lstCluster[0].Id;
+        
+        await GetList();
     }
 
     private async Task Save(int id)
@@ -188,7 +187,7 @@
     private async Task DeployAsync()
     {
         var load = await js.InvokeAsync<int>("layer.load", 0, "{shade: false}");
-        var clusterVO = _lstCluster.Find(o => o.Id == _selectClusterId);
+        var clusterVO = _lstCluster.Find(o => o.Id == _clusterId);
         if (clusterVO == null)
         {
             await js.InvokeVoidAsync("layer.alert", "请先选择集群环境", new {icon = 0});
@@ -213,7 +212,7 @@
     private async Task DeployAsync(int id)
     {
         var load = await js.InvokeAsync<int>("layer.load", 0, "{shade: false}");
-        var clusterVO = _lstCluster.Find(o => o.Id == _selectClusterId);
+        var clusterVO = _lstCluster.Find(o => o.Id == _clusterId);
         if (clusterVO == null)
         {
             await js.InvokeVoidAsync("layer.alert", "请先选择集群环境", new {icon = 0});
@@ -239,6 +238,33 @@
             await js.InvokeVoidAsync("layer.alert", e.Message, new {icon = 2, title = "出错了"});
         }
         await js.InvokeVoidAsync("layer.close", load);
+    }
+
+    private async Task ClusterChange(ChangeEventArgs args)
+    {
+        _clusterId = args.Value.ConvertType(0);
+        await GetList();
+    }
+
+    private async Task GetList()
+    {
+        // 重新读取所有项目列表
+        _lst = await _iocManager.Resolve<IProjectService>().ToListAsync();
+
+        // 遍历项目组ID
+        var projectGroupIds = _lst.Select(o => o.GroupId).ToList();
+        for (var i = 0; i < projectGroupIds.Count; i++)
+        {
+            var projectGroupId = projectGroupIds[i];
+            var info = await _iocManager.Resolve<IProjectGroupService>().ToInfoAsync(projectGroupId);
+            
+            // 如果项目组不包含当前选中的集群，则移除项目
+            if (!info.ClusterIds.Contains(_clusterId))
+                _lst.RemoveAll(o => o.GroupId == projectGroupId);
+        }
+
+        _lst        = _lst.OrderByDescending(o => o.Id).ToList();
+        _totalCount = _lst.Count;
     }
 
 }
