修改显示格式

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/deploy/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/deploy/List.razor
@@ -15,7 +15,7 @@
         <select style="display:inline;" @onchange="ClusterChange">
             @foreach (var clusterVO in _lstCluster)
             {
-                <option value="@clusterVO.Id">@clusterVO.RuntimeEnvType 环境 @clusterVO.Name</option>
+                <option value="@clusterVO.Id">@clusterVO.Name - @clusterVO.RuntimeEnvType</option>
             }
         </select>
         <div class="layui-right">
