--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/git/Add.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/git/Add.razor
@@ -27,6 +27,12 @@
             </div>
         </div>
         <div class="layui-form-item">
+            <label class="layui-form-label">分支</label>
+            <div class="layui-input-block">
+                <input type="text" @bind="_info.Branch" autocomplete="off" placeholder="请输入分支" class="layui-input">
+            </div>
+        </div>
+        <div class="layui-form-item">
             <label class="layui-form-label">Git账户名称</label>
             <div class="layui-input-inline">
                 <input type="text" @bind="_info.UserName" placeholder="请输入Git账户名称" autocomplete="off" class="layui-input">
@@ -52,15 +58,15 @@
 
 @code{
 
-    private readonly GitVO _info = new() {};
+    private readonly GitVO _info = new() {Branch = "main"};
 
     private async Task AddInfo()
     {
         try
         {
-            if (_info.Name == null || _info.Hub == null)
+            if (string.IsNullOrWhiteSpace(_info.Name) || string.IsNullOrWhiteSpace(_info.Hub) || string.IsNullOrWhiteSpace(_info.Branch))
             {
-                throw new Exception("Git名称、托管地址必须填写。");
+                throw new Exception("Git名称、托管地址、分支必须填写。");
             }
             await _iocManager.Resolve<IGitService>().AddAsync(_info);
             await js.InvokeVoidAsync("layer.alert", "添加成功", new {icon = 1});
