--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
@@ -64,13 +64,13 @@
                 </dl>
             </li>
             <li data-name="deploy" class="layui-nav-item">
-                <a href="javascript:;" lay-tips="发布" lay-direction="2">
+                <a href="javascript:;" lay-tips="构建" lay-direction="2">
                     <i class="layui-icon layui-icon-app"></i>
-                    <cite>发布</cite>
+                    <cite>构建</cite>
                 </a>
                 <dl class="layui-nav-child">
                     <dd data-name="content">
-                        <NavLink href="/deploy/build/list">立即构建</NavLink>
+                        <NavLink href="/builder/list">立即</NavLink>
                     </dd>
                 </dl>
             </li>
