--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/single/Deploy.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/single/Deploy.razor
@@ -69,9 +69,8 @@
         try
         {
             var runShellResult = await deployService.DeployAsync(_yaml, clusterVO);
-            var output = string.Join("<br />", runShellResult.Output);
-            if (runShellResult.IsError) await js.InvokeVoidAsync("layer.alert", output, new {icon = 2, title = "出错了"});
-            else await js.InvokeVoidAsync("layer.alert", output, new {icon = 1, title = "执行结果"});
+            if (runShellResult.IsError) await js.InvokeVoidAsync("layer.alert", runShellResult.OutputBr, new {icon = 2, title = "出错了"});
+            else await js.InvokeVoidAsync("layer.alert", runShellResult.OutputBr, new {icon = 1, title = "执行结果"});
         }
         catch (Exception e)
         {
